--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@task) do |f| %>
+<%= form_for @task, remote: true do |f| %>
   <% if @task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -14,10 +14,6 @@
   <div class="field">
     <%= f.label :name %><span>&nbsp &nbsp &nbsp</span>
     <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :completed %>
-    <%= check_box "task","completed", {}, true, false %>
   </div>
   <div class="actions">
     <%= f.submit %>
