--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,27 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Tasks</h1>
+<h1>Check List</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= link_to "New Task", new_task_path, id: "new_link", remote: true %>
 
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.name %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<h2>Incomplete Tasks</h2>
+<div id="incomplete_tasks" class="tasks">
+  <%= render @incomplete_tasks %>
+</div>
 
-<br>
-
-<%= link_to 'New Task', new_task_path %>
+<h2>Complete Tasks</h2>
+<div id="complete_tasks" class="tasks">
+  <% if @complete_tasks  %>
+  <%= render @complete_tasks %>
+    
+  <% end %>
+</div>
