Completion of Ajaxified ToDo List

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,8 +11,8 @@
 
 <h2>Complete Tasks</h2>
 <div id="complete_tasks" class="tasks">
-  <% if @complete_tasks  %>
-  <%= render @complete_tasks %>
+  <% if @completed_tasks  %>
+  <%= render @completed_tasks %>
     
   <% end %>
 </div>
