--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,4 +1,4 @@
-<%= form_for task do |f| %>
+<%= form_for task, remote: true do |f| %>
   <%= f.check_box :completed %>
   <%= f.submit 'Update' %>
   <%= f.label :completed, task.name %>
