font sizes made smaller

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 <h1>Check List</h1>
 <%= link_to "New Task", new_task_path, id: "new_link", remote: true %>
-<h2>Incomplete Tasks</h2>
+<h2>Incomplete</h2>
 <div id="incomplete_tasks" class="tasks">
   <%= render @incomplete_tasks %>
 </div>
 
-<h2>Complete Tasks</h2>
+<h2>Complete</h2>
 <div id="complete_tasks" class="tasks">
   <% if @completed_tasks  %>
   <%= render @completed_tasks %>
