--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -7,14 +7,16 @@
 
 .row {
   background-color: gray;
-  margin: 2px;
-  padding: 5px;
+  margin: 1px;
+  padding: 3px;
+  border-radius: 3px;
 }
 
 .col {
   flex: 1;
   background-color: gray;
-  margin: 2px;
+  margin: 1px;
+  border-radius: 3px;
 }
 
 body {
