started created form for Streams

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div class="row">User info, basic controls</div>
+<div class="row">Form for stream</div>
 
 <div class="flex-grid">
 
